--- a/requirements.txt
+++ b/requirements.txt
@@ -31,5 +31,8 @@ pypdf>=6.0.0
 tiktoken>=0.12.0
 transformers>=4.57.0
 
+# Displaying outputs (Spyder plot)
+matplotlib>=3.6.0
+
 # Development and debugging
 # jupyter>=1.0.0      # Uncomment for notebook development
